--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
       display: none;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       padding: 20px;
+      padding-top: 40px;
       z-index: 100;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
     .screen.active { display: flex; }
 
