--- a/index.html
+++ b/index.html
@@ -43,6 +43,69 @@
       margin-bottom: 30px;
     }
 
+    /* ===== AUTH SCREEN ===== */
+    #authScreen {
+      background: radial-gradient(ellipse at center, rgba(80,20,80,0.3) 0%, transparent 70%),
+                  linear-gradient(135deg, #0a0a12 0%, #1a1a2e 100%);
+    }
+    .auth-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: min(380px, 90%);
+      padding: 30px;
+      background: rgba(255,255,255,0.05);
+      border-radius: 16px;
+      border: 1px solid rgba(255,255,255,0.1);
+      margin-bottom: 20px;
+    }
+    .auth-container.hidden {
+      display: none;
+    }
+    .auth-title {
+      font-size: 24px;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 20px;
+    }
+    .auth-input {
+      width: 100%;
+      padding: 14px 18px;
+      font-size: 16px;
+      border: 2px solid rgba(255,255,255,0.2);
+      border-radius: 10px;
+      background: rgba(255,255,255,0.05);
+      color: #fff;
+      outline: none;
+      margin-bottom: 12px;
+      box-sizing: border-box;
+    }
+    .auth-input:focus {
+      border-color: rgba(255,100,100,0.6);
+      box-shadow: 0 0 15px rgba(255,100,100,0.2);
+    }
+    .auth-input::placeholder { color: rgba(255,255,255,0.3); }
+    .auth-error {
+      color: #ff6b6b;
+      font-size: 14px;
+      margin-top: 10px;
+      min-height: 20px;
+      text-align: center;
+    }
+    .auth-switch {
+      color: rgba(255,255,255,0.6);
+      font-size: 14px;
+      margin-top: 15px;
+    }
+    .auth-switch span {
+      color: #ff6b6b;
+      cursor: pointer;
+      font-weight: 600;
+    }
+    .auth-switch span:hover {
+      text-decoration: underline;
+    }
+
     /* ===== NICKNAME SCREEN ===== */
     #nicknameScreen {
       background: radial-gradient(ellipse at center, rgba(80,20,80,0.3) 0%, transparent 70%),
@@ -811,8 +874,39 @@
   <!-- Global Music Toggle Button -->
   <button class="music-toggle" id="globalMusicBtn">🔊</button>
 
+  <!-- ===== AUTH SCREEN (Login/Register) ===== -->
+  <div class="screen active" id="authScreen">
+    <div class="screen-title">🥷 RPGTURK Runner v1.0</div>
+    <div class="screen-subtitle">Gölgelerde koş, düşmanları alt et!</div>
+    
+    <div class="auth-container" id="loginContainer">
+      <div class="auth-title">Giriş Yap</div>
+      <input type="text" class="auth-input" id="loginUsername" placeholder="Kullanıcı adı" maxlength="16" autocomplete="off" />
+      <input type="password" class="auth-input" id="loginPassword" placeholder="Şifre" maxlength="32" />
+      <button class="btn" id="loginBtn">Giriş Yap</button>
+      <div class="auth-error" id="loginError"></div>
+      <div class="auth-switch">
+        Hesabın yok mu? <span id="showRegister">Kayıt Ol</span>
+      </div>
+    </div>
+
+    <div class="auth-container hidden" id="registerContainer">
+      <div class="auth-title">Kayıt Ol</div>
+      <input type="text" class="auth-input" id="registerUsername" placeholder="Kullanıcı adı" maxlength="16" autocomplete="off" />
+      <input type="email" class="auth-input" id="registerEmail" placeholder="E-posta" maxlength="64" autocomplete="off" />
+      <input type="password" class="auth-input" id="registerPassword" placeholder="Şifre" maxlength="32" />
+      <button class="btn" id="registerBtn">Kayıt Ol</button>
+      <div class="auth-error" id="registerError"></div>
+      <div class="auth-switch">
+        Hesabın var mı? <span id="showLogin">Giriş Yap</span>
+      </div>
+    </div>
+
+    <button class="btn-secondary" id="authLeaderboardBtn">🏆 Skor Tablosu</button>
+  </div>
+
   <!-- ===== NICKNAME SCREEN ===== -->
-  <div class="screen active" id="nicknameScreen">
+  <div class="screen" id="nicknameScreen">
     <div class="screen-title">🥷 RPGTURK Runner v1.0</div>
     <div class="screen-subtitle">Gölgelerde koş, düşmanları alt et!</div>
     <input type="text" class="nick-input" id="nickInput" placeholder="Nickname gir..." maxlength="16" autocomplete="off" />
@@ -1023,7 +1117,10 @@
     </div>
 
     <button class="btn" id="startBtn" disabled>Mekan Seç →</button>
-    <button class="btn-secondary" id="charSelectLeaderboardBtn">🏆 Skor Tablosu</button>
+    <div style="display: flex; gap: 10px; margin-top: 10px;">
+      <button class="btn-secondary" id="charSelectLeaderboardBtn">🏆 Skor Tablosu</button>
+      <button class="btn-secondary" id="logoutBtn" style="background: rgba(255,100,100,0.2);">🚪 Çıkış Yap</button>
+    </div>
   </div>
 
   <!-- ===== LOCATION SELECT SCREEN ===== -->
@@ -1716,12 +1813,32 @@
 
   // ===== DOM ELEMENTS =====
   const screens = {
+    auth: document.getElementById('authScreen'),
     nickname: document.getElementById('nicknameScreen'),
     charSelect: document.getElementById('charSelectScreen'),
     locationSelect: document.getElementById('locationSelectScreen'),
     leaderboard: document.getElementById('leaderboardScreen'),
     game: document.getElementById('gameScreen')
   };
+
+  // Auth elements
+  const loginContainer = document.getElementById('loginContainer');
+  const registerContainer = document.getElementById('registerContainer');
+  const loginUsername = document.getElementById('loginUsername');
+  const loginPassword = document.getElementById('loginPassword');
+  const loginBtn = document.getElementById('loginBtn');
+  const loginError = document.getElementById('loginError');
+  const registerUsername = document.getElementById('registerUsername');
+  const registerEmail = document.getElementById('registerEmail');
+  const registerPassword = document.getElementById('registerPassword');
+  const registerBtn = document.getElementById('registerBtn');
+  const registerError = document.getElementById('registerError');
+  const showRegister = document.getElementById('showRegister');
+  const showLogin = document.getElementById('showLogin');
+  const authLeaderboardBtn = document.getElementById('authLeaderboardBtn');
+
+  // Logged in user
+  let currentUser = null;
 
   const nickInput = document.getElementById('nickInput');
   const nickBtn = document.getElementById('nickBtn');
@@ -1774,6 +1891,7 @@
   const playAgainBtn = document.getElementById('playAgainBtn');
   const backToMenuBtn = document.getElementById('backToMenuBtn');
   const charSelectLeaderboardBtn = document.getElementById('charSelectLeaderboardBtn');
+  const logoutBtn = document.getElementById('logoutBtn');
   const nickLeaderboardBtn = document.getElementById('nickLeaderboardBtn');
 
   // Firebase Realtime Database URL
@@ -2712,6 +2830,160 @@
     screens[name].classList.add('active');
   }
 
+  // ===== AUTH SCREEN =====
+  // Toggle between login and register
+  showRegister.addEventListener('click', () => {
+    loginContainer.classList.add('hidden');
+    registerContainer.classList.remove('hidden');
+    loginError.textContent = '';
+    registerError.textContent = '';
+  });
+
+  showLogin.addEventListener('click', () => {
+    registerContainer.classList.add('hidden');
+    loginContainer.classList.remove('hidden');
+    loginError.textContent = '';
+    registerError.textContent = '';
+  });
+
+  // Register
+  registerBtn.addEventListener('click', async () => {
+    const username = registerUsername.value.trim();
+    const email = registerEmail.value.trim();
+    const password = registerPassword.value;
+
+    if (username.length < 2) {
+      registerError.textContent = 'Kullanıcı adı en az 2 karakter olmalı';
+      return;
+    }
+    if (!email.includes('@')) {
+      registerError.textContent = 'Geçerli bir e-posta girin';
+      return;
+    }
+    if (password.length < 4) {
+      registerError.textContent = 'Şifre en az 4 karakter olmalı';
+      return;
+    }
+
+    registerBtn.disabled = true;
+    registerError.textContent = '';
+
+    try {
+      // Check if username already exists in Firebase
+      const usersResponse = await fetch(`${FIREBASE_URL}/users.json`);
+      const usersData = await usersResponse.json();
+      
+      if (usersData) {
+        const users = Object.values(usersData);
+        if (users.find(u => u.username.toLowerCase() === username.toLowerCase())) {
+          registerError.textContent = 'Bu kullanıcı adı zaten alınmış';
+          registerBtn.disabled = false;
+          return;
+        }
+        if (users.find(u => u.email.toLowerCase() === email.toLowerCase())) {
+          registerError.textContent = 'Bu e-posta zaten kayıtlı';
+          registerBtn.disabled = false;
+          return;
+        }
+      }
+
+      // Register new user to Firebase
+      const newUser = {
+        username: username.slice(0, 16),
+        email: email.toLowerCase(),
+        password: btoa(password), // Simple base64 encoding (not secure, but ok for game)
+        createdAt: new Date().toISOString()
+      };
+
+      await fetch(`${FIREBASE_URL}/users.json`, {
+        method: 'POST',
+        body: JSON.stringify(newUser)
+      });
+
+      // Registration successful - auto login
+      currentUser = { username, email };
+      nickname = username;
+      localStorage.setItem('ninja_user', JSON.stringify(currentUser));
+      welcomeText.textContent = `Hoş geldin, ${username}!`;
+      showScreen('charSelect');
+    } catch (err) {
+      registerError.textContent = 'Sunucu hatası';
+    }
+    registerBtn.disabled = false;
+  });
+
+  // Login
+  loginBtn.addEventListener('click', async () => {
+    const username = loginUsername.value.trim();
+    const password = loginPassword.value;
+
+    if (username.length < 1 || password.length < 1) {
+      loginError.textContent = 'Tüm alanları doldurun';
+      return;
+    }
+
+    loginBtn.disabled = true;
+    loginError.textContent = '';
+
+    try {
+      // Fetch users from Firebase
+      const usersResponse = await fetch(`${FIREBASE_URL}/users.json`);
+      const usersData = await usersResponse.json();
+
+      if (!usersData) {
+        loginError.textContent = 'Kullanıcı bulunamadı';
+        loginBtn.disabled = false;
+        return;
+      }
+
+      const users = Object.values(usersData);
+      const user = users.find(u => u.username.toLowerCase() === username.toLowerCase());
+
+      if (!user) {
+        loginError.textContent = 'Kullanıcı bulunamadı';
+        loginBtn.disabled = false;
+        return;
+      }
+
+      // Check password (base64 encoded)
+      if (user.password !== btoa(password)) {
+        loginError.textContent = 'Şifre yanlış';
+        loginBtn.disabled = false;
+        return;
+      }
+
+      // Login successful
+      currentUser = { username: user.username, email: user.email };
+      nickname = user.username;
+      localStorage.setItem('ninja_user', JSON.stringify(currentUser));
+      welcomeText.textContent = `Hoş geldin, ${user.username}!`;
+      showScreen('charSelect');
+    } catch (err) {
+      loginError.textContent = 'Sunucu hatası';
+    }
+    loginBtn.disabled = false;
+  });
+
+  // Auth leaderboard button
+  authLeaderboardBtn.addEventListener('click', () => {
+    viewLeaderboard('auth');
+  });
+
+  // Check if already logged in
+  (function checkSavedLogin() {
+    const saved = localStorage.getItem('ninja_user');
+    if (saved) {
+      try {
+        currentUser = JSON.parse(saved);
+        nickname = currentUser.username;
+        welcomeText.textContent = `Hoş geldin, ${currentUser.username}!`;
+        showScreen('charSelect');
+      } catch (e) {
+        localStorage.removeItem('ninja_user');
+      }
+    }
+  })();
+
   // ===== NICKNAME SCREEN =====
   nickInput.addEventListener('input', () => {
     const val = nickInput.value.trim();
@@ -2771,6 +3043,8 @@
       }
     } else if (leaderboardReturnTo === 'nickname') {
       showScreen('nickname');
+    } else if (leaderboardReturnTo === 'auth') {
+      showScreen('auth');
     } else {
       showScreen('charSelect');
     }
@@ -2779,6 +3053,25 @@
   // Karakter seçim ekranından skor tablosuna
   charSelectLeaderboardBtn.addEventListener('click', () => {
     viewLeaderboard('charSelect');
+  });
+
+  // Çıkış yap butonu
+  logoutBtn.addEventListener('click', () => {
+    currentUser = null;
+    nickname = '';
+    localStorage.removeItem('ninja_user');
+    // Reset form inputs
+    loginUsername.value = '';
+    loginPassword.value = '';
+    registerUsername.value = '';
+    registerEmail.value = '';
+    registerPassword.value = '';
+    loginError.textContent = '';
+    registerError.textContent = '';
+    // Show login container
+    loginContainer.classList.remove('hidden');
+    registerContainer.classList.add('hidden');
+    showScreen('auth');
   });
 
   // Oyun içinden skor tablosuna
