--- a/index.html
+++ b/index.html
@@ -1554,8 +1554,9 @@
     <div class="arena-container">
       <!-- Main Menu -->
       <div id="arenaMenu">
-        <div class="arena-title">⚔️ ARENA - PvP Düello</div>
+        <div class="arena-title">⚔️ ARENA - PvP</div>
         <div class="arena-subtitle">Diğer oyunculara karşı savaş!</div>
+        <div class="arena-subtitle">Henüz geliştirme aşamasındadır! </div>
         
         <div class="arena-section">
           <div class="arena-section-title">📋 Aktif Odalar</div>
