--- a/index.html
+++ b/index.html
@@ -1206,6 +1206,99 @@
     @media (max-width: 600px) {
       .location-grid { grid-template-columns: 1fr; gap: 15px; }
       .location-preview { height: 100px; }
+      #locationSelectScreen {
+        padding-bottom: 30px;
+        overflow-y: auto;
+      }
+      #locationSelectScreen .screen-title {
+        font-size: 28px;
+      }
+      .location-name {
+        font-size: 16px;
+      }
+    }
+
+    /* ===== CHARACTER SELECT MOBILE RESPONSIVE ===== */
+    @media (max-width: 900px) {
+      #charSelectScreen {
+        padding-right: 20px;
+        padding-left: 20px;
+        padding-bottom: 200px;
+      }
+      .char-select-coins {
+        position: relative;
+        top: auto;
+        right: auto;
+        margin-bottom: 15px;
+        font-size: 16px;
+        padding: 8px 16px;
+      }
+      .char-grid {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+      }
+      .char-card {
+        padding: 12px 8px;
+      }
+      .char-avatar {
+        width: 50px;
+        height: 50px;
+        font-size: 24px;
+      }
+      .char-name {
+        font-size: 14px;
+      }
+      .char-skills {
+        font-size: 8px;
+        padding: 5px;
+      }
+      .char-select-sidebar {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: auto;
+        transform: none;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 8px;
+        padding: 12px;
+        background: linear-gradient(to top, rgba(0,0,0,0.95) 0%, rgba(0,0,0,0.85) 100%);
+        border-top: 1px solid rgba(255,255,255,0.1);
+      }
+      .char-select-sidebar .btn-secondary {
+        width: auto;
+        flex: 1;
+        min-width: 100px;
+        max-width: 150px;
+        padding: 10px 12px;
+        font-size: 11px;
+      }
+      #charSelectScreen #startBtn {
+        margin-bottom: 10px;
+      }
+    }
+    @media (max-width: 500px) {
+      .char-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px;
+      }
+      .char-avatar {
+        width: 40px;
+        height: 40px;
+      }
+      .char-name {
+        font-size: 12px;
+      }
+      .char-skills {
+        display: none;
+      }
+      .char-select-sidebar .btn-secondary {
+        min-width: 80px;
+        font-size: 10px;
+        padding: 8px 10px;
+      }
     }
 
     /* Scrollbar styling */
@@ -1348,7 +1441,7 @@
   <!-- ===== AUTH SCREEN (Login/Register) ===== -->
   <div class="screen active" id="authScreen">
     <img src="img/logo.png" alt="RPGTURK Runner Logo" class="auth-logo" />
-    <div class="screen-title">🥷 RPGTURK Runner v1.0</div>
+    <div class="screen-title">🥷 Ninja Runner v1.0</div>
     <div class="screen-subtitle">Gölgelerde koş, düşmanları alt et!</div>
     
     <div class="auth-container" id="loginContainer">
