--- a/index.html
+++ b/index.html
@@ -166,18 +166,16 @@
     #charSelectScreen {
       background: radial-gradient(ellipse at center, rgba(20,60,100,0.3) 0%, transparent 70%),
                   linear-gradient(135deg, #0a0a12 0%, #1a1a2e 100%);
-      overflow-y: scroll !important;
+      overflow-y: auto;
+      overflow-x: hidden;
       -webkit-overflow-scrolling: touch;
       justify-content: flex-start;
-      padding-top: 40px;
-      padding-bottom: 100px;
-      padding-right: 180px;
-      position: relative;
+      align-items: center;
+      padding: 20px;
+      padding-top: 30px;
+      padding-bottom: 50px;
     }
     .char-select-coins {
-      position: absolute;
-      top: 20px;
-      right: 190px;
       background: rgba(255,180,0,0.2);
       border: 2px solid rgba(255,180,0,0.4);
       padding: 10px 20px;
@@ -187,6 +185,7 @@
       color: #ffd700;
       cursor: pointer;
       transition: all 0.2s;
+      margin-bottom: 15px;
     }
     .char-select-coins:hover {
       background: rgba(255,180,0,0.35);
@@ -275,21 +274,22 @@
     .profile-value.score {
       color: #8b5cf6;
     }
-    /* Right side panel for buttons */
+    /* Buttons panel - now inline below grid */
     .char-select-sidebar {
-      position: fixed;
-      right: 20px;
-      top: 50%;
-      transform: translateY(-50%);
       display: flex;
-      flex-direction: column;
-      gap: 12px;
-      z-index: 100;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 15px;
+      margin-bottom: 20px;
+      width: min(900px, 95%);
     }
     .char-select-sidebar .btn-secondary {
-      width: 140px;
+      width: auto;
+      min-width: 120px;
       text-align: center;
-      padding: 12px 16px;
+      padding: 12px 18px;
       font-size: 13px;
     }
     .char-grid {
@@ -1222,15 +1222,11 @@
     /* ===== CHARACTER SELECT MOBILE RESPONSIVE ===== */
     @media (max-width: 900px) {
       #charSelectScreen {
-        padding-right: 20px;
-        padding-left: 20px;
-        padding-bottom: 200px;
+        padding: 15px;
+        padding-top: 20px;
+        padding-bottom: 40px;
       }
       .char-select-coins {
-        position: relative;
-        top: auto;
-        right: auto;
-        margin-bottom: 15px;
         font-size: 16px;
         padding: 8px 16px;
       }
@@ -1254,30 +1250,12 @@
         padding: 5px;
       }
       .char-select-sidebar {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        top: auto;
-        transform: none;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
         gap: 8px;
-        padding: 12px;
-        background: linear-gradient(to top, rgba(0,0,0,0.95) 0%, rgba(0,0,0,0.85) 100%);
-        border-top: 1px solid rgba(255,255,255,0.1);
       }
       .char-select-sidebar .btn-secondary {
-        width: auto;
-        flex: 1;
         min-width: 100px;
-        max-width: 150px;
         padding: 10px 12px;
         font-size: 11px;
-      }
-      #charSelectScreen #startBtn {
-        margin-bottom: 10px;
       }
     }
     @media (max-width: 500px) {
