--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
       padding: 20px;
       padding-top: 30px;
       padding-bottom: 50px;
+      padding-right: 170px;
     }
     .char-select-coins {
       background: rgba(255,180,0,0.2);
@@ -274,23 +275,21 @@
     .profile-value.score {
       color: #8b5cf6;
     }
-    /* Buttons panel - now inline below grid */
+    /* Buttons panel - fixed top right */
     .char-select-sidebar {
+      position: fixed;
+      top: 80px;
+      right: 20px;
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: center;
+      flex-direction: column;
       gap: 10px;
-      margin-top: 15px;
-      margin-bottom: 20px;
-      width: min(900px, 95%);
+      z-index: 150;
     }
     .char-select-sidebar .btn-secondary {
-      width: auto;
-      min-width: 120px;
+      width: 130px;
       text-align: center;
-      padding: 12px 18px;
-      font-size: 13px;
+      padding: 10px 14px;
+      font-size: 12px;
     }
     .char-grid {
       display: grid;
@@ -1225,10 +1224,11 @@
         padding: 15px;
         padding-top: 20px;
         padding-bottom: 40px;
+        padding-right: 15px;
       }
       .char-select-coins {
-        font-size: 16px;
-        padding: 8px 16px;
+        font-size: 14px;
+        padding: 6px 12px;
       }
       .char-grid {
         grid-template-columns: repeat(3, 1fr);
@@ -1250,15 +1250,20 @@
         padding: 5px;
       }
       .char-select-sidebar {
-        gap: 8px;
+        top: 70px;
+        right: 10px;
+        gap: 6px;
       }
       .char-select-sidebar .btn-secondary {
-        min-width: 100px;
-        padding: 10px 12px;
-        font-size: 11px;
+        width: 100px;
+        padding: 8px 10px;
+        font-size: 10px;
       }
     }
-    @media (max-width: 500px) {
+    @media (max-width: 600px) {
+      #charSelectScreen {
+        padding-right: 120px;
+      }
       .char-grid {
         grid-template-columns: repeat(2, 1fr);
         gap: 8px;
@@ -1273,10 +1278,14 @@
       .char-skills {
         display: none;
       }
+      .char-select-sidebar {
+        top: 60px;
+        right: 8px;
+      }
       .char-select-sidebar .btn-secondary {
-        min-width: 80px;
-        font-size: 10px;
-        padding: 8px 10px;
+        width: 90px;
+        font-size: 9px;
+        padding: 6px 8px;
       }
     }
 
