--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
       background: rgba(255,180,0,0.35);
       transform: scale(1.05);
     }
+    .char-select-banner {
+      width: min(400px, 80%);
+      height: auto;
+      margin-bottom: 15px;
+      filter: drop-shadow(0 0 20px rgba(100,150,255,0.3));
+      border-radius: 12px;
+    }
     /* Profile Modal */
     .profile-modal {
       display: none;
@@ -1509,6 +1516,8 @@
   <div class="screen" id="charSelectScreen">
     <!-- Coin display top right (clickable for profile) -->
     <div class="char-select-coins" id="charSelectCoins" title="Profili Gör">🪙 Profil | 0</div>
+    
+    <img src="img/ninja-banner.png" alt="Ninja Banner" class="char-select-banner" />
     
     <div class="screen-title">Ninja Seç</div>
     <div class="screen-subtitle" id="welcomeText">Hoş geldin!</div>
