Rename Maxdown boss to Maxdown V-1

--- a/index.html
+++ b/index.html
@@ -3777,7 +3777,7 @@
   };
 
   const BOSS_MAXDOWN = {
-    name: 'MAXDOWN',
+    name: 'MAXDOWN V-1',
     maxHp: 1500,
     width: 120,
     height: 160,
